--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "motel-korpus-tailwind",
   "version": "1.0.0",
   "scripts": {
-    "dev": "npx @tailwindcss/cli -i ./style.css -o ./output.css --watch"
+    "dev": "npx @tailwindcss/cli -i ./style.css -o ./output.css --watch --minify",
+    "build": "npx @tailwindcss/cli -i ./style.css -o ./output.css --minify"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.18"
